<resources>
    <string name="app_name">GithubSearch</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="username">NamaUser</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_followers">Followers</string>
    <string name="section_following">Following</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="tidak_ada_followers">Tidak ada Followers</string>
    <string name="tidak_ada_following">Tidak ada Following</string>
    <string name="tidak_ada_user">User tidak ditemukan</string>
    <string name="current_company">Google developer</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="main_app">Github</string>
</resources>